--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,102 @@
 body {
     display: flex;
     justify-content: center;
-    /*border: 1px solid red;*/
     outline: 2px solid black;
 
 }
 
 div.body-site {
-    /*border: 1px solid blue;*/
     width: 1380px;
 }
 
 /* ----------------- ЧАСТЬ HEADER -----------------------*/
 header {
-    /*border: 1px solid rgb(85, 148, 13);*/
     height: 150px;
     display: flex;
     justify-content: center;
 }
 
+
+div.logo-left{
+    margin-top: 50px;
+    margin-right: 200px;
+}
+
+div.logo-right{
+    margin-top: 50px;
+    margin-left: 200px;
+}
+
 img.Logo-header {
     width: 64px;
     height: 64px;
-    /*border: 1px solid rgb(183, 13, 235);*/
+    border: 2px solid;
+    margin: 10px;
+    padding: 6px;
+    border-radius: 50%;
+    border-left: 2px solid rgb(23, 134, 129);
+    border-top: 2px solid rgb(23, 134, 129);
+    border-right: 2px solid rgb(44, 230, 255);
+    border-bottom: 2px solid rgb(44, 230, 255);
 }
 
-p.header {
-    display: inline-block;
-    /*border: 1px solid rgb(183, 13, 235);*/
+
+
+h1.header {
+    margin-top: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #FF0000;
+    -webkit-text-stroke: 1px rgb(0, 0, 0);
+	text-shadow: 3px 3px 2px white,
+                4px 4px 2px blue,
+                5px 5px 2px red;
+    
 }
+
 
 /* ----------------- ЧАСТЬ MAIN -----------------------*/
-
 main {
-    /*border: 1px solid rgb(235, 57, 13);*/
     display: flex;
-    /*justify-content: center;*/
 }
 
+
+
+
+/* ---- left colomn --- */
 aside.left {
-    /*border: 1px solid red;*/
+    border: 1px solid red;
     flex: 1;
-
+}
+nav {
+    margin-top: 60px;
+    border: 1px solid yellowgreen;
 }
 
-nav {
-    /*border: 1px solid yellowgreen;*/
+li{
+    font-weight: 400;
+}
+
+
+
+
+
+
+
+
+/* ---- center colomn --- */
+
+h3{
+    text-align: center;
+    text-transform: uppercase;
+    color:darkblue;
 }
 
 section {
     /*border: 1px solid green;*/
     flex: 7;
-
 }
 
 div.articles {
@@ -75,8 +120,34 @@ div.line-2{
 article {
     /*border: 1px solid yellowgreen;*/
     flex: 1;
-    padding-right: 5px;
-    padding-left: 5px;
+    padding-right: 15px;
+    padding-left: 15px;
+    text-align: justify;
+}
+
+h4.header-article {
+    font-weight: 300;
+    text-align: center;
+    color: aliceblue;
+    text-shadow: 
+		-0   -1px 0   #000000,
+		 0   -1px 0   #000000,
+		-0    1px 0   #000000,
+		 0    1px 0   #000000,
+		-1px -0   0   #000000,
+		 1px -0   0   #000000,
+		-1px  0   0   #000000,
+		 1px  0   0   #000000,
+		-1px -1px 0   #000000,
+		 1px -1px 0   #000000,
+		-1px  1px 0   #000000,
+		 1px  1px 0   #000000,
+		-1px -1px 0   #000000,
+		 1px -1px 0   #000000,
+		-1px  1px 0   #000000,
+		 1px  1px 0   #000000;
+    background: linear-gradient( rgb(188, 195, 196) ,rgb(30, 14, 168) , rgb(201, 15, 15) );
+    /*генератор обводки https://protocoder.ru/css/strokeTextGen */
 }
 
 img.logo-article {
@@ -91,20 +162,98 @@ strong.HTML{
     color: chocolate;
 }
 
+strong.CSS{
+    color: rgb(32, 19, 212);
+}
+
+strong.Bootstrap{
+    color: rgb(124, 24, 190);
+}
+
+strong.AngularJS{
+    color: rgb(221, 20, 20);
+}
+
+p {
+    text-align: justify;
+    /*border: 1px solid red;*/
+
+}
+
+p.border {
+    border-left: 5px solid darkblue;
+    border-right: 5px solid darkblue;
+    border-top: 20px solid darkblue;
+    border-bottom: 20px solid darkblue;
+    margin-left: 30px;
+    margin-right: 30px;
+    color: darkblue;
+    padding: 4px;
+}
+
+
+
+
+
+
+
+
+
+
+/* ---- right colomn --- */
 aside.right {
+    margin-top: 20px;
     /*border: 1px solid rgb(11, 43, 104);*/
     flex: 2;
 
 }
 
-p {
-    /*border: 1px solid red;*/
+article.news {
+    /*border: 1px solid yellowgreen;*/
+    flex: 1;
+    padding-right: 5px;
+    padding-left: 15px;
 }
+
+h3.news{
+    text-align: center;
+    color:darkblue;
+    text-transform:none;
+    font-weight: 600;
+    
+}
+
+h4.header-news {
+    text-align: center;
+    color: aliceblue;
+    background: darkblue;
+}
+
+p.news {
+    color: darkblue;
+    text-align: justify;
+    /*border: 1px solid red;*/
+
+}
+
+
+
+
+
+
 
 /* ----------------- ЧАСТЬ FOOTER -----------------------*/
 
 footer {
     /*border: 1px solid rgb(183, 13, 235);*/
     height: 150px;
+}
+
+p.footer{
+    text-align: center;
+    text-shadow: rgb(20, 2, 85) 1px 1px 7px;
+    color: rgb(8, 8, 56);
+    font-weight: 600;
+    font-size: large;
 }
 
