--- a/css/style_html5.css
+++ b/css/style_html5.css
@@ -1,31 +1,110 @@
-body {
-    display: flex;
-    justify-content: center;
+body{
+    background-color: rgb(233, 229, 229);
 }
-
-
-div.body-site {
+div.wrapper {
     outline-style: solid;
     width: 1380px;
+    margin: auto;
 }
 
+/* ----------------- ЧАСТЬ HEADER -----------------------*/
 header{
     outline-style: solid;
 }
+header nav{
+    top: 10px;
+    z-index: 1;
+    position: sticky;
+    border: 2px solid green;
+}
+
+/*header div.test{
+    display: flex;
+    justify-content: center;
+}*/
 
 
+header nav a{
+    /*padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: aqua;
+    border: 1px solid red;
+    border-radius: 20%;*/
+}
+
+
+/* ----------------- ЧАСТЬ MAIN -----------------------*/
 main{
+    outline-style: solid;
+    display: flex;
+}
+
+/* ---------- left colomn ---------- */
+aside.left{
+    font-size: large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    outline-style: solid;
+    padding: 50px;
+}
+
+aside.left nav{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
+    padding: 20px;
+    /*top: 50px;
+    position: sticky;*/
+}
+
+aside.left a{
+    padding-bottom: 10px;
+    margin: auto;
+}
+
+
+/* ---------- center colomn ---------- */
+section{
     outline-style: solid;
 }
 
+article{
+    outline-style: solid;
+}
+
+img.img-element{
+    width: 500px;
+}
+
+img.img-attribute{
+    width: 500px;
+}
+
+
+article.article-1 img{
+    float: right;
+    width: 200px;
+    height: 200px;
+    outline-style: solid;
+}
+
+
+
+
+/* ----------------- ЧАСТЬ FOOTER -----------------------*/
 footer{
     outline-style: solid;
 }
 
-aside.left{
-    outline-style: solid;
-}
 
-section{
-    outline-style: solid;
-}
+
+
+
+
+
+
+
+
+
+
+
