--- a/css/style_html5.css
+++ b/css/style_html5.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap');
+
+
+
 body{
-    background-color: #edf0f8;
+    background-color: rgba(34, 35, 39, 0.93);
 }
 div.wrapper {
     /*outline-style: solid;*/
@@ -8,10 +13,10 @@ div.wrapper {
 }
 
 /* ----------------- ЧАСТЬ HEADER -----------------------*/
-/*header{
-    outline-style: solid;
+header{
 
-}*/
+
+}
 /*header nav{
     position: sticky;
     top: 10px;
@@ -38,18 +43,35 @@ div.wrapper {
 
 /* ----------------- ЧАСТЬ MAIN -----------------------*/
 main{
+    position: relative;
     /*outline-style: solid;*/
 
 }
 div.main{
     display: flex;
 }
+h2{
+    font-family: 'Rubik Mono One', sans-serif;
+    font-size: 30px;
+    text-align: center;
+    color: #fff;
+    text-shadow: 10px 10px 30px #2400ff, -10px -10px 30px #7e2bd9;
+    -webkit-text-stroke: 1px #fc78ff;
+    -webkit-text-fill-color: transparent;
+    letter-spacing: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+h3{
+    font-family: 'Noto Sans Mono', monospace;
+}
 
 aside.global_nav{
-    top:0px;
+    top:-1px;
     position: sticky;
     background: #4F52FF;
-    height: 40px;
+    height: 60px;
 }
 
 nav.global-nav{
@@ -64,13 +86,38 @@ nav.global-nav{
 nav.global-nav a{
     color: aliceblue;
     align-self: center;
+    border: solid 1px #fd837c;
+    padding: 5px;
+    border-radius: 10px ;
+    background-color: #fd837c;
+    color: #0d046d;
+    font-family: 'Noto Sans Mono', monospace;
+
 }
+
+nav.global-nav a:hover{
+    animation: jump;
+    animation: jump 1s ease infinite;
+}
+@keyframes jump {
+    50% { transform: translateY(-10px); }
+}
+
+
+
+ p, ul, ol{
+     font-family: 'Noto Sans Mono', monospace;
+     font-size: 14px;
+     margin-right: 10px;
+ }
+
+
 /* ---------- left colomn ---------- */
 aside.left{
     font-size: large;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    /*outline-style: solid;*/
-    padding: 70px;
+    font-family: 'Noto Sans Mono', monospace;
+    background: #4F52FF;
+    padding: 50px;
 }
 
 aside.left nav{
@@ -83,15 +130,23 @@ aside.left nav{
 }
 
 aside.left a{
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
+    color: #0d046d;
+}
 
-
+nav.page-nav{
+    border: solid 1px sandybrown;
+    background-color: #fd837c;
+    border-radius: 15px 100px 15px 100px;
 }
 
 
 /* ---------- center colomn ---------- */
 section{
     /*outline-style: solid;*/
+    padding: 10px;
 }
 
 article{
@@ -99,6 +154,17 @@ article{
     text-align: justify;
     /*background: url('../images/html_elements.png')
 */
+}
+
+.article-1{
+    padding: 15px;
+}
+div.text{
+    background-color: #e3eafc;
+    padding: 20px;
+    border-radius: 100px;
+    margin-bottom: 50px;
+
 }
 
 
@@ -121,21 +187,63 @@ article.article-1 img{
     float: left;
     width: 250px;
     height: 250px;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+
+article.article-4 img{
+    margin: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
 
+article.article-4 img.img1{
+    float: right;
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
 
 
-/* ----------------- ЧАСТЬ FOOTER -----------------------*/
+    /* ----------------- ЧАСТЬ FOOTER -----------------------*/
 footer{
-    /*outline-style: solid;*/
+    background: #4F52FF;
 }
 
+footer img{
+    width: 100px;
+    height: 256px;
 
+}
 
+footer div{
+    display: block;
+    width: 200px;
+}
+footer p{
+    margin: 0 0 0 0;
+    text-align: center;
+}
 
+img.symbol-navigation{
+    display: block;
+    width: 50px;
+    height: 80px;
+    right: 50px;
+    top: 800px;
+    position: fixed;
+}
 
+img.symbol-navigation:hover{
+    animation: jump;
+    animation: jump 1s ease infinite;
+}
+@keyframes jump {
+    50% { transform: translateY(-30px); }
+}
 
+/*https://ru.stackoverflow.com/questions/1130013/%D0%9A%D0%B0%D0%BA-%D1%81%D0%B4%D0%B5%D0%BB%D0%B0%D1%82%D1%8C-%D1%87%D1%82%D0%BE%D0%B1%D1%8B-%D0%BF%D1%80%D0%B8-%D0%BD%D0%B0%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B8-%D0%B8%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B4%D0%B2%D0%B8%D0%B3%D0%B0%D0%BB%D0%BE%D1%81%D1%8C*/
 
 
 
