--- a/css/style_html5.css
+++ b/css/style_html5.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap');
 
-
 body {
     background-color: rgba(34, 35, 39, 0.93);
 }
@@ -116,7 +115,7 @@ img.img-nav {
 }
 
 /* ---------- center colomn ---------- */
-section {
+div.section {
     padding: 10px;
 }
 
