--- a/css/style_AngularJS.css
+++ b/css/style_AngularJS.css
@@ -136,18 +136,13 @@ p, ul, ol {
     margin-right: 10px;
 }
 
-#article-1 {
-    padding: 15px;
+
+
+#rule-css{
+    width: 150px;
+    height: 92px;
 }
 
-article#article-1 img {
-    float: left;
-    width: 150px;
-    height: 275px;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin-top: 10px;
-}
 
 img.img-element {
     display: block;
